--- a/releases.json
+++ b/releases.json
@@ -1,71 +1,160 @@
 {
   "HT MWD": [
     {
-      "Software": "Date ",
-      "Firmware": "UMPU"
+      "Date": "",
+      "TFO": "",
+      "Utility": "",
+      "Data File": "",
+      "Decoding Software": "",
+      "UMPU": "5.0.1.9",
+      "UHPM": "1.0.0.1",
+      "UFGI": "5.2.1.6",
+      "Note": ""
     },
     {
-      "Firmware": "5.0.1.9",
-      "Note": "There are 3 UMPU Hardware version .so there are 3 FW version"
+      "Date": "2021.05.17",
+      "TFO": "UTE-TFO-UFGI V2.2.0.3",
+      "Utility": "3.3.1.6",
+      "Data File": "V31",
+      "Decoding Software": "USiRV8.4.1.7,UMPUD2.3.0.7",
+      "UMPU": "5.1.2.9",
+      "UHPM": "",
+      "UFGI": "5.2.1.6",
+      "Note": "There are 3 UMPU Hardware version.so there are 3 FW version"
     },
     {
-      "Software": "2021.05.17",
-      "Firmware": "5.1.2.9"
-    },
-    {
-      "Firmware": "5.3.2.9"
-    },
-    {
-      "Software": "2021.09.30"
+      "Date": "2021.09.30",
+      "TFO": "",
+      "Utility": "3.3.4.7",
+      "Data File": "",
+      "Decoding Software": "UMPUD2.3.0.7,UPDSV8.5.0.2",
+      "UMPU": "",
+      "UHPM": "",
+      "UFGI": "",
+      "Note": ""
     }
   ],
   "MWD+NBT": [
     {
-      "Software": "Utility",
-      "MWD": "UPSW",
-      "NBT": "GOTX"
-    },
-    {
       "Date": "2021.06.30",
-      "Software": "3.3.3.7",
-      "MWD": "3.0.3.4 for BL24/BL28B",
-      "NBT": "5344 for BL24/BL29A",
-      "NOTE": "Voltage Control"
+      "TFO": "",
+      "Utility": "3.3.3.7",
+      "Data File": "",
+      "Decoding Software": "UPDS8.5.0.2,UMPD2.3.0.7",
+      "UPSW": "3.0.3.4(BL24/BL28B)",
+      "UMPU": "3.4.0.7 (BL24/BL29M)",
+      "UDRX": "2.0.2.2",
+      "GOTX": "5.3.4.4 (BL24/BL29A)",
+      "GPSW": "6.0.2.4 (BL21/BL28A)",
+      "GDAI": "5.0.3.2",
+      "Note": "Voltage Control"
     },
     {
       "Date": "2021.07.14",
-      "Software": "3.3.4.1",
-      "MWD": "3.0.3.4",
-      "NBT": "5.4.0.5 for BL24/BL29A"
-    },
+      "TFO": "",
+      "Utility": "3.3.4.1",
+      "Data File": "",
+      "Decoding Software": "",
+      "UPSW": "3.0.3.4(BL24/BL28B)",
+      "UMPU": "3.4.0.7 (BL24/BL29M)",
+      "UDRX": "2.0.2.2",
+      "GOTX": "5.4.0.5 (BL24/BL29A)",
+      "GPSW": "6.0.2.7 (BL21/BL28A)",
+      "GDAI": "5.0.3.2",
+      "Note": "Power and Voltage Control"
+
+   }, 
     {
       "Date": "2021.07.30",
-      "MWD": "3.0.3.4",
-      "NBT": "5.4.0.7 for BL24/BL29A",
-      "NOTE": "Power and Voltage Control"
+      "TFO": "",
+      "Utility": "3.3.3.7",
+      "Data File": "",
+      "Decoding Software": "UPDS8.5.0.2,UMPD2.3.0.7",
+      "UPSW": "3.0.3.4(BL24/BL28B)",
+      "UMPU": "3.4.0.7 (BL24/BL29M)",
+      "UDRX": "2.0.2.2",
+      "GOTX": "5.3.4.4 (BL24/BL29A)",
+      "GPSW": "6.0.2.4 (BL21/BL28A)",
+      "GDAI": "5.0.3.2",
+      "Note": "Voltage Control"
     },
     {
       "Date": "2021.08.05",
-      "Software": "3.3.4.3",
-      "NOTE": "Read/Set gamma Unit"
-    },
+      "TFO": "",
+      "Utility": "3.3.4.1",
+      "Data File": "",
+      "Decoding Software": "",
+      "UPSW": "3.0.3.4(BL24/BL28B)",
+      "UMPU": "3.4.0.7 (BL24/BL29M)",
+      "UDRX": "2.0.2.2",
+      "GOTX": "5.4.0.5 (BL24/BL29A)",
+      "GPSW": "6.0.2.7 (BL21/BL28A)",
+      "GDAI": "5.0.3.2",
+      "Note": "Power and Voltage Control"
+
+   },
+
     {
+      "Date": "2021.08.05",
+      "TFO": "",
+      "Utility": "3.3.4.3",
+      "Data File": "",
+      "Decoding Software": "",
+      "UPSW": "3.0.3.4(BL24/BL28B)",
+      "UMPU": "3.4.0.7 (BL24/BL29M)",
+      "UDRX": "2.0.2.2",
+      "GOTX": "5.4.0.5 (BL24/BL29A)",
+      "GPSW": "6.0.2.7 (BL21/BL28A)",
+      "GDAI": "5.0.3.2",
+      "Note": "Power and Voltage Control"
+
+   },
+   {
       "Date": "2021.08.26",
-      "Software": "3.3.4.7",
-      "MWD": "3.0.3.4",
-      "NOTE": "UMPU with IOM -35 test version"
-    },
-    {
+      "TFO": "",
+      "Utility": "3.3.4.7",
+      "Data File": "",
+      "Decoding Software": "",
+      "UPSW": "3.0.3.4(BL24/BL28B)",
+      "UMPU": "3.5.0.2 (BL24/BL29M)",
+      "UDRX": "2.0.2.2",
+      "GOTX": "",
+      "GPSW": "",
+      "GDAI": "",
+      "Note": "UMPU with IOM -35 test version"
+
+   },
+   {
       "Date": "2021.08.26",
-      "Software": "3.3.4.7",
-      "MWD": "3.0.3.4",
-      "NOTE": "UMPU with APS test version low angle TF stable--42b00"
-    },
-    {
+      "TFO": "",
+      "Utility": "3.3.4.7",
+      "Data File": "",
+      "Decoding Software": "",
+      "UPSW": "3.0.3.4",
+      "UMPU": "3.4.1.3 (BL24/BL29M)",
+      "UDRX": "2.0.2.2",
+      "GOTX": "",
+      "GPSW": "",
+      "GDAI": "",
+      "Note": "UMPU with APS test version low angle TF stable--42b00"
+
+   },
+  {
       "Date": "2021.10.02",
-      "Software": "3.3.4.7",
-      "MWD": "3.0.3.4",
-      "NOTE": "UMPU with APS test version low angle TF stable--42b10"
-    }
+      "TFO": "",
+      "Utility": "3.3.4.7",
+      "Data File": "",
+      "Decoding Software": "",
+      "UPSW": "3.0.3.4",
+      "UMPU": "0.4.1.4 (BL24/BL29M)",
+      "UDRX": "2.0.2.2",
+      "GOTX": "",
+      "GPSW": "",
+      "GDAI": "",
+      "Note": "UMPU with APS test version low angle TF stable--42b10"
+
+   }
+
+
   ]
 }
