--- a/releases.json
+++ b/releases.json
@@ -16,7 +16,7 @@
       "TFO": "UTE-TFO-UFGI V2.2.0.3",
       "Utility": "3.3.1.6",
       "Data File": "V31",
-      "Decoding Software": "USiRV8.4.1.7,UMPUD2.3.0.7",
+      "Decoding Software": "USiRV8.4.1.7,UMPD2.3.0.7",
       "UMPU": "5.1.2.9",
       "UHPM": "",
       "UFGI": "5.2.1.6",
@@ -27,7 +27,7 @@
       "TFO": "",
       "Utility": "3.3.4.7",
       "Data File": "",
-      "Decoding Software": "UMPUD2.3.0.7,UPDSV8.5.0.2",
+      "Decoding Software": "UMPD2.3.0.7,UPDS8.5.0.2",
       "UMPU": "",
       "UHPM": "",
       "UFGI": "",
