--- a/releases.json
+++ b/releases.json
@@ -55,8 +55,8 @@
       "Utility": "3.3.4.1",
       "Data File": "",
       "Decoding Software": "",
-      "UPSW": "3.0.3.4(BL24/BL28B)",
-      "UMPU": "3.4.0.7 (BL24/BL29M)",
+      "UPSW": "3.0.3.4",
+      "UMPU": "3.4.0.7",
       "UDRX": "2.0.2.2",
       "GOTX": "5.4.0.5 (BL24/BL29A)",
       "GPSW": "6.0.2.7 (BL21/BL28A)",
